# field-genius-engine

./: .env.example  .gitignore  CLAUDE.md  PENDING_NOTES.md  Procfile  nixpacks.toml  pyproject.toml  requirements.txt
agent_docs/: api_endpoints.md  architecture.md  backoffice.md  database_schema.md  deploy_and_infra.md  enterprise_audit_2026_03_31.md  enterprise_audit_2026_04_05.md  executive_adoption_funnel.md  experience_quality_assessment.md  hitl_workflow_spec.md  implementations.md  metrics_framework.md  monitoring_dashboard_spec.md  pipeline.md  pmf_action_plan.md  pmf_evaluation_plan.md  product_audit_2026_04_01.md  sprint_history.md  strategic_scenarios.md  telecable_production_plan.md  twilio_content_templates.md  usability_test_protocol.md  ux_ai_quality_data_plan.md
runbooks/: sprint-demo-poc.md
scripts/: migrate.py  seed_eficacia.py  test_vision_ab.py
sql/: 002_multi_tenant.sql  003_alerts.sql  004_hitl_states.sql  005_strategic_analysis.sql  006_laundry_care.sql  007_telecable.sql  008_user_groups_and_facts.sql  009_country_config_and_roles.sql  010_usage_tracking.sql  011_tenants_and_rls.sql  012_atomic_file_append.sql  013_supabase_hardening.sql  014_vision_strategy.sql  015_session_files_table.sql  016_per_client_whatsapp_number.sql  017_access_control.sql  018_fix_whatsapp_numbers.sql  019_backoffice_owners.sql  020_onboarding_config.sql  021_failed_jobs.sql  022_implementation_folder.sql  023_demo_keywords_and_fallback.sql  024_demo_telecom_setup.sql  025_demo_copy_improvements.sql  026_sample_reports.sql  027_telecable_no_terms_during_poc.sql  028_telecable_welcome_and_reset.sql  029_restore_demo_state.sql  030_demo_mode.sql  031_demo_leads.sql  032_poc_gating.sql  033_session_unique_and_cache_reload.sql  034_users_pending_contact_column.sql  schema.sql  seed.sql
src/: main.py
src/utils/: pdf.py  (+1 more)
tests/: extraction_golden_set.json  segmentation_test_cases.json  test_extraction_accuracy.py  test_extractor.py  test_pipeline.py  test_segmentation_accuracy.py  test_segmenter.py
(+34 files in other folders)
