[project]
name = "field-genius-engine"
version = "1.0.0"
description = "Multimodal capture → AI → structured reports engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "supabase==2.13.0",
    "openai==1.61.1",
    "anthropic==0.44.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "twilio==9.4.3",
    "google-auth==2.38.0",
    "gspread==6.1.4",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "redis==5.2.1",
    "arq==0.26.1",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
